examples/test/testpolicy4220.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4220
  namespace: namespace264
spec:
  podSelector:
    matchLabels:
      key40: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value31
          key28: value1
      podSelector:
        matchLabels:
          key41: value23
          key33: value14
